--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,9 @@
               {
                 "glob": "**/*",
                 "input": "public"
-              }
+              },
+              "src/assets",
+              "src/environments"
             ],
             "styles": [
               "src/styles.css"
