--- a/package.json
+++ b/package.json
@@ -29,8 +29,12 @@
     "@angular/forms": "^21.0.0",
     "@angular/platform-browser": "^21.0.0",
     "@angular/router": "^21.0.0",
+    "@emailjs/browser": "^4.4.1",
+    "emailjs-com": "^3.2.0",
+    "ng-particles": "^3.12.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0"
+    "tslib": "^2.3.0",
+    "tsparticles": "^3.9.1"
   },
   "devDependencies": {
     "@angular/build": "^21.0.4",
