--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [18.x, 20.x, 22.x]
+        node-version: [20.x, 22.x]
 
     steps:
       - name: Checkout repository
@@ -30,6 +30,6 @@ jobs:
       - name: Build Angular app
         run: npm run build --if-present
 
-      # Optional: enable if you have tests configured
+      # Optional
       # - name: Run tests
       #   run: npm test -- --watch=false --browsers=ChromeHeadless
