--- a/taticwebapp.config.json
+++ b/taticwebapp.config.json
@@ -1,14 +1,5 @@
 {
   "navigationFallback": {
-    "rewrite": "/index.html",
-    "exclude": [
-      "/assets/*",
-      "/*.css",
-      "/*.js",
-      "/*.png",
-      "/*.jpg",
-      "/*.svg",
-      "/*.ico"
-    ]
+    "rewrite": "/index.html"
   }
 }
