--- a/.github/workflows/GitHubdeploy.yml
+++ b/.github/workflows/GitHubdeploy.yml
@@ -3,7 +3,7 @@ name: Deploy Angular to GitHub Pages
 on:
   push:
     branches:
-      - master
+      - master   # ⚠️ change to master if your repo uses master
 
 permissions:
   contents: write
@@ -13,23 +13,27 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Angular app
-        run: npm run build -- --base-href /
+      - name: Build Angular
+        run: npm run build -- --configuration production --base-href /
+
+      - name: Disable Jekyll
+        run: touch dist/<personalPortFolioAngular>/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./dist/personalPortFolioAngular/browser
-          cname: www.codewithatesh.dev
+          publish_dir: dist/<ANGULAR_PROJECT_NAME>
+          cname: www.codewithat.dev
