--- a/.github/workflows/GitHubdeploy.yml
+++ b/.github/workflows/GitHubdeploy.yml
@@ -29,7 +29,7 @@ jobs:
         run: npm run build -- --configuration production --base-href /
 
       - name: Disable Jekyll
-        run: touch dist/<personalPortFolioAngular>/.nojekyll
+        run: touch dist/personalPortFolioAngular/.nojekyll
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
