--- a/.github/workflows/GitHubdeploy.yml
+++ b/.github/workflows/GitHubdeploy.yml
@@ -35,5 +35,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: dist/personalPortFolioAngular
-          cname: www.codewithat.dev
+          publish_dir: dist/personalPortFolioAngular/browser
+          cname: ateshbhalerao
